# simplerep

./: README.md  meson.build
data/: com.github.neofight.simplerep.appdata.xml.in  com.github.neofight.simplerep.desktop.in  gschema.xml  meson.build
po/: POTFILES  com.github.neofight.simplerep.pot  ru.po
src/: Application.vala  Database.vala  DeckItem.vala  MainWindow.vala  ThrottledEvent.vala
src/dialogs/: CardDialog.vala  CreateCardDialog.vala  EditCardDialog.vala
src/model/: Card.vala  Deck.vala
src/widgets/: BrowseView.vala  DeckItem.vala  DeckList.vala  DeckStack.vala  DeckView.vala  HeaderBar.vala  MainView.vala  SummaryView.vala
